<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_main_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/original_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/first_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/focusPoster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:paddingRight="8dp" />

        <LinearLayout
            android:id="@+id/sec_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/releaseInfo"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/voteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/vote_average"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/run_time"
                android:textColor="@color/textColor" />

            <ImageButton
                android:id="@+id/favB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@mipmap/fav_button" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
