<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/loadingtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/loading"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/loadPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loadingtv"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/networkErrorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/retry_tv"
        android:layout_marginBottom="6dp"
        android:textSize="@dimen/textSize"
        android:visibility="gone" />

    <Button
        android:id="@+id/retryB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/networkErrorTV"
        android:layout_centerHorizontal="true"
        android:background="@color/primaryColor"
        android:padding="8dp"
        android:text="@string/retry"
        android:textColor="@color/textColor"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movies_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>
